AC_INIT([kea], [0.3.0])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

AC_CHECK_HEADERS([stdlib.h])

AC_PROG_CC
PKG_PROG_PKG_CONFIG

PKG_CHECK_MODULES([GTK30], [gtk+-3.0])
PKG_CHECK_MODULES([WEBKIT2GTK40], [webkit2gtk-4.0])
AC_SUBST([GTK30_CFLAGS])
AC_SUBST([GTK30_LIBS])
AC_SUBST([WEBKIT2GTK40_CFLAGS])
AC_SUBST([WEBKIT2GTK40_LIBS])

AC_DEFINE_UNQUOTED([MAX_URI_SIZE], [2048], [Maximum URI size])

AC_CONFIG_FILES([
  Makefile
  src/Makefile
  pixmaps/Makefile
])
AC_OUTPUT
